# image-manip-lang

./: .gitignore  CMakeLists.txt  README.md
examples/: basic_convert.im  compose_example.im  draw-text.im  example.im  robust_convert.im
include/: ast.hpp  imdriver.hpp  imlexer.hpp  types.hpp  visitor.hpp  visitor_adaptor.hpp
include/ast/: args_list.hpp  conditional.hpp  dimension.hpp  else_stmt.hpp  exec.hpp  expr.hpp  for_stmt.hpp  funcall.hpp  funcall_conditional.hpp  if_stmt.hpp  line.hpp  lr_conditional.hpp  number_expr.hpp  qualified_id.hpp  range.hpp  string_expr.hpp  tree.hpp  tree_list.hpp
src/: imdriver.cpp  imlexer.ll  imparser.ypp  lexer.hpp  main.cpp  visitor.cpp  visitor_adaptor.cpp
src/ast/: accept.cpp  conditional.cpp  else_stmt.cpp  exec.cpp  expr.cpp  for_stmt.cpp  funcall.cpp  funcall_conditional.cpp  if_stmt.cpp  line.cpp  lr_conditional.cpp  qualified_id.cpp  tree.cpp  tree_list.cpp
